css: Fix URLs not wrapping properly

--- a/src/styles/base/_defaults.css
+++ b/src/styles/base/_defaults.css
@@ -18,3 +18,6 @@ body {
   overflow: hidden;
   overflow-y: auto;
 }
+a {
+  word-wrap: break-word;
+}
